Upgrade zircon to version 1.15 (many bugs fixed).

--- a/net/zircon/CHANGES
+++ b/net/zircon/CHANGES
@@ -1,3 +1,48 @@
+Changes in 1.15
+
+N.B. YOU MUST USE tcl 7.1 and tk 3.4 for releases after 1.15.4. There
+are bug fixes that are needed by Zircon.
+
+1) Fixed loss of scroll bar on resizing info window.
+
+2) Fixed Colour button problem in sketch pad.
+
+3) Fixed Ban+Kick bug
+
+4) Ban mode now lists bans when youa re not channel op.
+
+5) Added Names menu button. This duplicates the user buttons as a
+menu. The user buttons can be shown or removed using the Buttons menu
+item.
+
+6) Changed incoming message parsing - should now be faster
+
+7) Added variable friendsStyle - if this is set to menu then Friends
+appears as a pulldown menu. If set to window it has the original
+format.
+
+8) Fixed configure bug for noDraw
+
+9) Changed handling of text in windows (should be invisible except for
+performance improvement)
+
+10) Improved listbox handling internally - no visible changes
+
+11) Added showFriends variable - set it to 1 and the Friends window
+appears when zircon starts up.
+
+12) Too many internal changes to mention!
+
+13) Added -o option to switch of Ons
+
+14) Added bindings for Up Down Left and Right
+
+15) Added the ability to do /horrible type commands.
+
+16) Added CTCP Other interface
+
+17) and have a zillion other things.
+
 Changes in 1.14
 
 1) Fixed problem with auto searching servers list
