--- a/net/zircon/README
+++ b/net/zircon/README
@@ -1,35 +1,35 @@
-Zircon Release 1.14
+Zircon Release 1.15
 -----------------------
 
 This is a release of Zircon, an X11 interface to Internet Relay Chat.
 The software is written in tcl/tk and uses the tcl-dp TCP extensions
-to provide network communications. Beta testers are asked to provide
-comments on the interface that the system provides and to test it
-under of a variety of conditions. Please resist the temptation to hack
-the code. We will reach a stable, proper release quicker if we can
-centralise changes to the program, however suggestions for
-improvements in the code will also be welcome. We are particularly
-interested in making the system useful for those users in groups where
-JIPS and other national character sets are used.
+to provide network communications. Suggestions for improvements to
+Zircon are welcome. I am particularly interested in making the
+system useful for those users in groups where JIPS and other national
+character sets are used.
 
-Zircon was implemented as a way of learning tcl/tk and has taken a
-very short time to get to its current state of development. It has
-more features than you could possibly imagine and implements nearly
-everything that the irc II clients support as well as many other
-useful and interesting features. This reflects the power of tcl/tk
-*not* the fact that I am a wonderful programmer (I am, but that is a
-side issue :-)) tcl/tk is a wonderful system and you need it on your
-machine *NOW*.
+Zircon has more features than you could possibly imagine and
+implements nearly everything that the irc II clients support as well
+as many other useful and interesting features. This reflects the power
+of tcl/tk *not* the fact that I am a wonderful programmer (I am, but
+that is a side issue :-)) tcl/tk is a wonderful system and you need it
+on your machine *NOW*.
 
 Please send all reports, comments and suggestions to: 
 
 	zircon@catless.newcastle.ac.uk
 
-We can also often be found on channel #GB and will keep open 
-a channel #zircon when we are around. N.B. the user whose 
-nick is zircon has nothing to do with this progam.
+You can usually find me on the channel #zircon along with other
+helpful Zircon users (and ScottM is often there too 8-; ). N.B. the user
+whose nick is zircon has nothing to do with this progam. You can
+always get the latest release of Zircon from ZirconBot - send the
+message !send current and it will be dcc'ed to you. !send beta will
+often send the latest beta test release of the system. If you use the
+registration feature of Zircon ZirconBot will inform you off new
+releases when you sign on to IRC.
 
 Mail
+----
 	zircon-request@newcastle.ac.uk
 
 to be added to the Zircon users mailing list. Messages to the mailing
@@ -39,30 +39,35 @@ list should be sent to
 
 Enjoy!
 
-Jimbles and Lindsay
----------------------
+Lindsay
+-------
 
 REQUIREMENTS
 
 The software has been developed using:
 
-	tcl	Version 6.7		7.0
-	tk	Version 3.2		3.3
-	tcl-dp	Version 1.0ak		2.0
+	tcl	Version 7.3
+	tk	Version 3.6
+	tcl-dp	Version 3.0
 
-You must have the dpwish program rather than the usual wish for zircon
-to be runnable. Please use tcl 7.0 if you can as support for 6.7
-features will be removed in future versions.
+You must have the dpwish program rather than the usual wish for Zircon
+to be runnable.
 
 tcl/tk is available from harbor.ecn.purdue.edu in the directory
 /pub/tcl. tcl-dp is available there also, but the latest version can
-always be found on catless.ncl.ac.uk which is also the home of zircon.
+always be found on catless.ncl.ac.uk which is also the home of Zircon.
 
 You can configure lots of stuff using X resources, thus it is possible
 to make buttons and text associated with particular users and channels
 appear in special colours and fonts. The system is much easier to use
-than the usual UNIX interfaces to irc and a lot of people ar eusing it
-on a day to day basis.
+than the usual UNIX interfaces to irc and a lot of people are using it
+on a day to day basis. Zircon also supports a distributed drawing
+board, but please do not use this when there are non-Zircon users
+around as they get annoyed when they cant see the pictures.
+
+For people who really cannot do without their ircII style commands a
+subset of these are also supported both in an optional command line
+and from Channel windows - see the MANUAL for details.
 
 INSTALLATION
 
@@ -73,21 +78,13 @@ the main program to go. Then type
 
 	make install
 
-If you are on a Solaris system you may need the magic line
-
-LIBS= -lsocket -lnsl -lelf -lucb
-
-somewhere in your Makefiles and you may need to use gcc if you dont
-have cc.
-
 Now create a file called rc in the zircon directory. This acts as a
 system wide rc file for all zircon users. Minimally put in here the
 name of the default irc server that you wish users to connect to, and
 the default port if it is not 6667. Also useful would be the name of
 you rnearest irc help service :
 
-set defaultServer x.y.z
-set defaultPort 9999
+Server default -host x.y.z -port 9999
 set helpService "help_XX"
 
 The file DOTzirconrc shows you what you might want to put in your
@@ -106,9 +103,8 @@ be joined by posting to zircon-request@newcastle.ac.uk and posted to
 at zircon@newcastle.ac.uk You can usually find help in the #zircon
 channel on IRC as well.
 
-
-
-POSSIBLE FUTURE FEATURES
+Possible Future Extensions
+--------------------------
 
 1) Automatic AWAY canceling when you type in a window.
 
@@ -120,20 +116,23 @@ POSSIBLE FUTURE FEATURES
 
 5) Support for extended Server features
 
-KNOWN PROBLEMS
+Known Features
+--------------
 
 1) Zircon does not work with pre-2.8 servers.
 
-2) SED is not supported. DCC Chat is supported directly within Zircon
-but Send and get require binary I/O and are provided using external
-programs.
-
-3) There is no JIPS support. In fact there are problems when you even
-attempt to join a group with JIPS characters in its name as tcl tries
+2) There is no JIS support. In fact there are problems when you even
+attempt to join a group with JIS characters in its name as tcl tries
 to interpret the $ characters in them.... I have tried the JIPS
 version of tcl but it didnt help.
 
-4) Character escaping in the low level CTCP protocol is not done.
+3) Character escaping in the low level CTCP protocol is not done
+everywhere, but it *is* done for SED encrypted messages
 
-5) There are some weird things that can happen with menu handling.
-These may be tk problems but are hard to isolate.
+4) You cannot configure anything other than Channels using the
+configuration panel. If you wish to configure Message channels then
+you have to do them by hand in the rc file. This restriction will be
+lifted in the next release, along (I hope) with a completely redone
+configuration system.
+
+5) The Sketch Pad facility is not completely finished.
