Add entries for mprof, sather, sml, scm, schemetoc, seahaven, xjewel, golddig, ezd, md5, and wine.

--- a/README
+++ b/README
@@ -35,6 +35,7 @@ eispack			Matrix Eigensystem Routines		?
 elm			Elm Mail Reader				2.4
 emacs			GNU Emacs				1.21
 expect			I/O Processing / Parsing Tool		4 ALPHA
+ezd			easy drawing for X programs		15mar93
 f2c			Fortran-To-C Converter			?
 flexfax			Fax Send/Receive Software		2.2 BETA
 gcc1			GNU C Compiler				1.39
@@ -43,6 +44,7 @@ ghostscript		GNU Postscript Interpreter		2.61 PL4
 ghostview		Ghostscript Companion Previewer		1.5
 gic			Graphical Interface to CVS		1.1
 gmake			GNU Make Utility			3.69
+golddig			an X arcade game			2
 gopher			INTERNET Information Browsing Tool	2.0 PL6
 info-zip		Zip/Unzip Archiving Utils		1.9 PL1/5.0 PL1
 ingres			UCB Ingres Database			8.9
@@ -53,7 +55,9 @@ ksh			Korn Shell				4.5
 less			Text Pager				1.77
 lha			LHa Archive Utility			1.01u
 linpack			Performance Benchmarks			?
+md5			cryptographic checksums			none
 mh			Mail Software				6.8
+mprof			Memory Profiler and Leak Detector	3.0
 mtools			MS-DOS File Xfer Tools			2.0.7
 mush			Mail User's Shell			7.2.5
 nntp			Network News Transfer Protocol		1.5.11
@@ -63,9 +67,14 @@ perl			PERL Language				4.0 PL36
 pkg_install		Package Installation Software		1.0
 popper			Post Office Protocol			1.7
 rzsz			ZModem Communications Package		3.24.4
+sather			Sather Compiler				0.5.3
+seahaven		solitaire card game			none
 sc			Spreadsheet Calculator			6.21
+schemetoc		Scheme->C, a scheme compiler		15mar93
+scm			Scheme Interpreter			4d3
 screen			Multi-screen utility			3.5.1
 slurp			Advanced Passive NNTP Client		1.08
+sml			Standard ML compiler			0.93
 snd-util		Miscellaneous Sound Driver Utilities	1.0
 ss			Spreadsheet Calculator (sc) w/Changes	1.2 BETA
 sup			CMU network file updating protocol	?
@@ -86,10 +95,12 @@ unshar			SHarchive Unpacker			?
 unzip			ZIP Archive Utilities			5.1D/1.04/2.1
 ups			UPS X-Based Debugger			2.45
 urt			Utah Raster Toolkit			3.0
+xjewel			tetris-like X game			1.6
 xlock			X Screen-Locker				2.3
 xv			XV Image Display Utility		3.0
 xview			SUN XView Graphics Toolkit		3.2
 xxgdb			X-Based GDB front-end			1.06
+wine			MS Windows emulator			940209
 zcrypt			Poor-man's Crypt			?
 zip			ZIP Archive Utility (BETA?)		1.9i
 zircon			Tk-based Internet Relay Chat Client	1.14
