Add entries for a bunch of missing things.

--- a/README
+++ b/README
@@ -27,6 +27,7 @@ NAME			DESCRIPTION				VERSION
 afm			Adobe Font Metrics			?
 bash			GNU Bourne Again Shell			1.13
 blas			Linear Algebra Routines			1, 2 & 3
+blt			Extension toolkit for TK		1.5
 cflow			Functional Call Hierarchy Tool		?
 cnews			USENET News Software			C-News 930220
 dejagnu			GNU Program Test Suite			1.0
@@ -86,6 +87,7 @@ tcx			Transparently Compressed Executables	1.1
 term			Terminal-Multiplexing Utility		1.06
 tex			TeX Document Formatting Language	3.14
 texinfo			GNU Texinfo Support			3.0
+tiff			The TIFF image library			3.21
 tk			TCL Toolkit				3.6
 top			A System Monitoring Utility		3.2
 trn			Threaded Newsreader			3.2
@@ -95,8 +97,11 @@ unshar			SHarchive Unpacker			?
 unzip			ZIP Archive Utilities			5.1D/1.04/2.1
 ups			UPS X-Based Debugger			2.45
 urt			Utah Raster Toolkit			3.0
+xboing			breakout-line X game with sound		1.8
 xjewel			tetris-like X game			1.6
 xlock			X Screen-Locker				2.3
+xpilot			X based multiplayer game		3.0
+xtrek			Another X based multiplayer game	6.1
 xv			XV Image Display Utility		3.0
 xview			SUN XView Graphics Toolkit		3.2
 xxgdb			X-Based GDB front-end			1.06
