Upgrade to version 1.7.0

--- a/net/ncftp/README
+++ b/net/ncftp/README
@@ -78,11 +78,12 @@ of automatically.  For these systems, you should just be able to type
 'make' (but proceed to part C):
 
    Silicon Graphics IRIX
-   AIX
+   IBM's AIX
    SINIX
-   Ultrix (well, might need to use -lcursesX instead of -lcurses)
+   DEC's Ultrix (well, might need to use -lcursesX instead of -lcurses)
    NeXT
    Pyramid OSx
+   Berkley Software Design, Inc.'s BSDi
 
 Otherwise you will have to configure ncftp manually.
 
@@ -104,7 +105,9 @@ go to part C, below.
       The regular 'cc' is not an ANSI compiler.  You could also run
       something like 'ansi2knr' on the sources and hope it works.
 	  You will probably need to link both the curses and termcap
-	  libraries if you use -DCURSES (see below).
+	  libraries if you use -DCURSES (see below).  If you're running
+	  Solaris (SunOS 5.x or greater) add -DSolaris to SDEFS.
+	  I also needed to add -lnsl -lsocket to LIBS.
 
     Hewlett-Packard HP-UX:  If you have 7.0, you'll need to find
       a copy of <ftp.h> from somewhere (8.0 has it though). Then
