--- a/net/ncftp/ncftp.1
+++ b/net/ncftp/ncftp.1
@@ -181,7 +181,7 @@ So:
 o w
 .De
 .PP
-might match a site named bowser.nintendo.jp if that site appeared before
+might match a site named bowser.nintendo.co.jp if that site appeared before
 your entry for wuarchive.wustl.edu.
 .PP
 Most of the time we open remote sites anonymously, but
@@ -1375,7 +1375,7 @@ page remote files.
 Termcap padding is not correctly displayed.
 .PP
 There are no such sites named
-.I bowser.nintendo.jp
+.I bowser.nintendo.co.jp
 or
 .IR sphygmomanometer.unl.edu .
 .\"-------
