Updated to version 1.7.2

--- a/net/ncftp/README
+++ b/net/ncftp/README
@@ -142,7 +142,8 @@ go to part C, below.
 	Sequent's Dynix/PTX:  Add -DDYNIXPTX to SDEFS.
 	  Add -lsocket -linet -lnsl -lseq to LIBS.
 
-    DEC OSF1/1.3:  Use gcc, Add -DGETCWDSIZET to SDEFS.
+    DEC OSF1/1.3:  Use gcc, Add -DGETCWDSIZET to SDEFS.  cc might work,
+	 though.  Try cc if gcc chokes.
 
 If your system doesn't fit any of those, things will be trickier.  Answer
 all these questions and add to the SDEFS line.  You may want to try
@@ -233,8 +234,21 @@ If the hostname is wrong, or if it is in the form of 'yourlogin' or
 re-compile it with HOSTNAME set to your machine's address, in the
 form of 'machine.xxx.yyy.'
 
+*  (Optional) Add -DHAS_DOMAINNAME if you have the getdomainname()
+   function.
+
+*  (Optional) If you're having problems with your hostname not being
+full (i.e you have 'yourlogin@machine') all is not lost.  First of all,
+define HAS_DOMAINNAME if you can.  But sometimes getdomainname() doesn't
+work -- instead of giving you the domain name, it returns an empty
+string.  So you can hardcode the domain name by defining DOMAIN_NAME to
+be the domain (i.e. add -DDOMAIN_NAME=\"domain.nam\").  That way, if
+getdomainname doesn't work, the program will have something to fall back
+on.  This problem is common on SunOS/Solaris.
+
 *  (Optional) Add -DSTRICT_PROTOS if your compiler wants function prototypes
-for all functions, not just non-int-returning ones.
+for all functions, not just non-int-returning ones.  This is really just
+handy for debugging during development, so this is not recommended.
 
 
 Part C.  Program Options:
