Changed the package target to first install the programs before doing the pkg_create :-). Changed some path references in the man page to match the setup in FreeBSD.

--- a/mail/popper/popper.8
+++ b/mail/popper/popper.8
@@ -16,7 +16,7 @@
 .SH NAME
 popper \- pop 3 server
 .SH SYNOPSIS
-.B /usr/etc/popper
+.B /usr/local/etc/popper
 [ -d ]
 [ -t trace-file]
 .SH DESCRIPTION
@@ -64,7 +64,7 @@ state (other than a request to quit.)  If authentication fails, a
 warning message is logged and the session ends.  Once the user is
 identified, popper changes its user and group ids to match that of the
 user and enters the transaction state.  The server makes a temporary
-copy of the user's maildrop (ordinarily in /usr/spool/mail) which is
+copy of the user's maildrop (ordinarily in /var/mail) which is
 used for all subsequent transactions.  These include the bulk of POP
 commands to retrieve mail, delete mail, undelete mail, and so forth.  A
 Berkeley extension also allows the user to submit a mail parcel to the
@@ -128,7 +128,7 @@ be included by specifying the DEGUG compiler flag.  Note:  You still
 need to use the -d or -t option to obtain debugging output.
 .SH FILES
 .nf
-/usr/spool/mail         mail files
+/var/mail         mail files
 /etc/inetd.conf         pop program invocation
 /etc/syslog.conf        logging specifications
 .fi
