Added entries for DGD and InterViews

--- a/README
+++ b/README
@@ -31,6 +31,7 @@ blt			Extension toolkit for TK		1.5
 cflow			Functional Call Hierarchy Tool		?
 cnews			USENET News Software			C-News 930220
 dejagnu			GNU Program Test Suite			1.0
+dgd			Dworkin's GameDriver, MUD server	1.0.a6
 dvi2lj			DVI to HP LaserJet Filter		?
 eispack			Matrix Eigensystem Routines		?
 elm			Elm Mail Reader				2.4
@@ -50,6 +51,7 @@ gopher			INTERNET Information Browsing Tool	2.0 PL6
 info-zip		Zip/Unzip Archiving Utils		1.9 PL1/5.0 PL1
 ingres			UCB Ingres Database			8.9
 inn			Internet News Software			1.6
+iv			InterViews				3.1
 jpeg			JPEG Photo Compression Package		4A
 kermit			Kermit Communications Package		5A(189)
 ksh			Korn Shell				4.5
