* MakeTeXTFM now works with TeX and METAFONT         * TeX and METAFONT are configured to call MakeTeXTFM 	  on the fly         * ourpaths.c: call kpse_path_search (path, name, 1)         * added install_sauter default to web2c/Makefile.in

--- a/print/texk/ChangeLog
+++ b/print/texk/ChangeLog
@@ -1,3 +1,14 @@
+Thu May  5 23:14:38 1994  Andrew Moore  (alm@freefall.cdrom.com)
+
+        * MakeTeXTFM now works with TeX and METAFONT
+
+        * TeX and METAFONT are configured to call MakeTeXTFM
+	  on the fly
+
+        * ourpaths.c: call kpse_path_search (path, name, 1) 
+
+        * added install_sauter default to web2c/Makefile.in
+
 Mon Apr 25 16:08:23 1994    (alm@woops.talke.org)
 
 	* LaTeX and AMSLaTeX formats are built to use Sauter's true-size
