--- a/print/texk/ChangeLog
+++ b/print/texk/ChangeLog
@@ -1,3 +1,9 @@
+Sat May  7 00:56:57 1994  Andrew Moore  (alm@freefall.cdrom.com)
+
+	* MakeTeXTFM gets installed now
+
+        * added sauterdir default to web2c/Makefile.in
+
 Thu May  5 23:14:38 1994  Andrew Moore  (alm@freefall.cdrom.com)
 
         * MakeTeXTFM now works with TeX and METAFONT
