--- a/print/texk/ChangeLog
+++ b/print/texk/ChangeLog
@@ -1,6 +1,6 @@
 Sat May  7 00:56:57 1994  Andrew Moore  (alm@freefall.cdrom.com)
 
-	* MakeTeXTFM gets installed now
+	* MakeTeXTFM gets built correctly (and installed) now
 
         * added sauterdir default to web2c/Makefile.in
 
