hack texdraw.tex so that cvs doesn't trash it

--- a/print/texk/texmf/tex/texdraw/texdraw.tex
+++ b/print/texk/texmf/tex/texdraw/texdraw.tex
@@ -1,6 +1,6 @@
 % TeXdraw macros
 
-% $Id: texdraw.tex,v 1.1 1994/04/14 03:16:26 alm Exp $
+% $Id: texdraw.tex,v 1.2 1994/05/08 03:49:52 alm Exp $
 
 %   Copyright (C) 1991, 1992, 1993  Peter Kabal
 
@@ -19,8 +19,9 @@
 
 %  kabal@TSP.EE.McGill.CA
  
-\def\setRevDate $#1 #2 #3${\def\TeXdrawId{TeXdraw V1R5 <#2>}}
-\setRevDate $Date: 1994/04/14 03:16:26 $
+%\def\setRevDate $#1 #2 #3${\def\TeXdrawId{TeXdraw V1R5 <#2>}}
+%\setRevDate $Date: 1994/05/08 03:49:52 $
+\def\TeXdrawId{TeXdraw V1R5 <1993/04/10>}
 
 % ===============================================================
 
