clean up tugboat stuff so that keyword index is buildable from scratch

--- a/print/texk/doc/tugboat/README
+++ b/print/texk/doc/tugboat/README
@@ -1,2 +1,6 @@
 Removed *apl*
 Moved *.sty, *hyph* *.cmn to texmf/tex/tugboat/
+
+bibclean.sh and wcat.c are substitutes for the rather large
+bibclean(1).  bibclean.sh works well enough for our purposes...
+
