--- a/print/texk/ChangeLog
+++ b/print/texk/ChangeLog
@@ -1,3 +1,7 @@
+Mon May 16 21:38:19 1994  Andrew Moore  (alm@freefall.cdrom.com)
+
+	* Added MakeTeXMF (called by METAFONT)
+        
 Sat May  7 00:56:57 1994  Andrew Moore  (alm@freefall.cdrom.com)
 
 	* MakeTeXTFM gets built correctly (and installed) now
