--- a/print/texk/doc/tugboat/tbcv05.tex
+++ b/print/texk/doc/tugboat/tbcv05.tex
@@ -15,7 +15,7 @@
 %	use \\ to split multiple lines for \sec and \subsite
 
 \onenarrow				% 1#1 short; try to stretch it
-\input tb0180.cnt			% 1980: 1#1
+\input t-of-c/tb0180.cnt			% 1980: 1#1
 
 \onecol 				% but all others are long
 \input t-of-c/tb0281.cnt			% 1981: 2#1, #2, #3
