Cleaning up tugboat stuff

--- a/print/texk/texmf/bibtex/bib/tugboat.bib
+++ b/print/texk/texmf/bibtex/bib/tugboat.bib
@@ -4,7 +4,7 @@ BibTeX database file for TUGboat created automatically with
 
         awk -f tugboat.awk
 
-by alm at freefall.cdrom.com on Sun May 15 17:07:14 PDT 1994
+by alm at freefall.cdrom.com on Wed May 18 15:58:44 PDT 1994
 
 Input files:
         t-of-c/tb0180.cnt
@@ -9683,7 +9683,7 @@ Input files:
 @Article{Malyshev:TB12-2-212-214,
   author =       "Basil Malyshev and Alexander Samarin and Dimitri
                  Vulis",
-  title =        "{{% Russian {\TeX}}}",
+  title =        "{{Russian {\TeX}}}",
   journal =      TUGboat,
   year =         "1991",
   volume =       "12",
@@ -10212,514 +10212,6 @@ Input files:
   volume =       "12",
   number =       "2-1",
   pages =        "126",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-127-128,
-  author =       "Anonymous",
-  title =        "{{Generic format}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "127--128",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-128-128,
-  author =       "Anonymous",
-  title =        "{{Acorn Archimedes}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "128--128",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-128-128-2,
-  author =       "Anonymous",
-  title =        "{{Amiga}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "128--128",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-128-128-3,
-  author =       "Anonymous",
-  title =        "{{Atari ST}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "128--128",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-128-128-4,
-  author =       "Anonymous",
-  title =        "{{Data General}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "128--128",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-128-128-5,
-  author =       "Anonymous",
-  title =        "{{DEC-20\Dash TOPS-20}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "128--128",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-128-129,
-  author =       "Anonymous",
-  title =        "{{IBM mainframes\dash MVS}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "128--129",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-129-129,
-  author =       "Anonymous",
-  title =        "{{IBM mainframes\dash VM/CMS}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "129--129",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-129-129-2,
-  author =       "Anonymous",
-  title =        "{{IBM PC and compatibles\Dash MS-DOS}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "129--129",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-130-130,
-  author =       "Anonymous",
-  title =        "{{Macintosh}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "130--130",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-130-130-2,
-  author =       "Anonymous",
-  title =        "{{Prime}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "130--130",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-130-130-3,
-  author =       "Anonymous",
-  title =        "{{Unix}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "130--130",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-130-131,
-  author =       "Anonymous",
-  title =        "{{\VAX/VMS}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "130--131",
-  month =        Jun,
-}
-
-@Article{Nieland:TB12-2-1-131-132,
-  author =       "Ted Nieland",
-  title =        "{{Announcing the DECUS {\TeX} Collection, February
-                 1991}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "131--132",
-  month =        Jun,
-}
-
-@Article{Hosek:TB12-2-1-133-158,
-  author =       "Don Hosek",
-  title =        "{{{\TeX} Output Devices}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "133--158",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-159-159,
-  author =       "Anonymous",
-  title =        "{{General observations}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "159--159",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-160-160,
-  author =       "Anonymous",
-  title =        "{{Aston \ ({\tt uk.ac.tex})}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "160--160",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-160-160-2,
-  author =       "Anonymous",
-  title =        "{{Clarkson ({\LaTeX} styles)}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "160--160",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-160-160-3,
-  author =       "Anonymous",
-  title =        "{{{{\tt e-math.ams.com}}}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "160--160",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-161-161,
-  author =       "Anonymous",
-  title =        "{{Heidelberg \ ({\tt DHDURZ1.Bitnet})}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "161--161",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-161-161-2,
-  author =       "Anonymous",
-  title =        "{{{{\tt june.cs.washington.edu}}}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "161--161",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-161-161-3,
-  author =       "Anonymous",
-  title =        "{{{{\tt labrea.stanford.edu}}}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "161--161",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-161-161-4,
-  author =       "Anonymous",
-  title =        "{{Nijmegen \ ({\tt HEARN.Bitnet})}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "161--161",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-162-162,
-  author =       "Anonymous",
-  title =        "{{SHSU \ ({\tt niord.shsu.edu}\,, {\tt
-                 SHSU.bitnet})}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "162--162",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-162-162-2,
-  author =       "Anonymous",
-  title =        "{{SPAN/DECnet (Italy)}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "162--162",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-162-163,
-  author =       "Anonymous",
-  title =        "{{Stuttgart \ ({\tt rusmv1.rus.uni-stuttgart.de})}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "162--163",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-163-163,
-  author =       "Anonymous",
-  title =        "{{Utrecht \ ({\tt archive.cs.ruu.nl})}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "163--163",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-163-163-2,
-  author =       "Anonymous",
-  title =        "{{{{\tt ymir.claremont.edu}}}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "163--163",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-163-164,
-  author =       "Anonymous",
-  title =        "{{Other archives containing {\TeX} material}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "163--164",
-  month =        Jun,
-}
-
-@Article{Damerell:TB12-2-1-164-169,
-  author =       "R. M. Damerell",
-  title =        "{{Fetching files from the Aston archive}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "164--169",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-170-171,
-  author =       "Anonymous",
-  title =        "{{General comments}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "170--171",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-171-171,
-  author =       "Anonymous",
-  title =        "{{{{\tt comp.text.tex}}}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "171--171",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-171-171-2,
-  author =       "Anonymous",
-  title =        "{{{{\tt ELLHNIKA}} (Greek)}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "171--171",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-172-172,
-  author =       "Anonymous",
-  title =        "{{{{\tt GUT}} (GUTenberg)}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "172--172",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-172-172-2,
-  author =       "Anonymous",
-  title =        "{{{{\tt INFO-TeX}}}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "172--172",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-172-172-3,
-  author =       "Anonymous",
-  title =        "{{{{\tt IVRITEX}} (Semitic languages)}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "172--172",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-172-172-4,
-  author =       "Anonymous",
-  title =        "{{{{\tt LaTeX-help}}}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "172--172",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-173-173,
-  author =       "Anonymous",
-  title =        "{{{{\tt RUSTeX-L}} (Russian)}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "173--173",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-173-173-2,
-  author =       "Anonymous",
-  title =        "{{{{\tt TeX-D-L}} (German)}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "173--173",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-173-173-3,
-  author =       "Anonymous",
-  title =        "{{{{\tt TeX-EURO}}}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "173--173",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-173-174,
-  author =       "Anonymous",
-  title =        "{{{{\tt TeXhax}}}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "173--174",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-174-174,
-  author =       "Anonymous",
-  title =        "{{{\TeX}MaG}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "174--174",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-174-174-2,
-  author =       "Anonymous",
-  title =        "{{{{\tt TeX-Pubs}}}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "174--174",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-174-175,
-  author =       "Anonymous",
-  title =        "{{{{\tt UKTeX}}}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "174--175",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-175-175,
-  author =       "Anonymous",
-  title =        "{{{{\tt TeX-NL}} (Dutch)}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "175--175",
-  month =        Jun,
-}
-
-@Article{Anonymous:TB12-2-1-175-175-2,
-  author =       "Anonymous",
-  title =        "{{{{\tt YUNUS}} (Turkish)}}",
-  journal =      TUGboat,
-  year =         "1991",
-  volume =       "12",
-  number =       "2-1",
-  pages =        "175--175",
   month =        Jun,
 }
 
